--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ a {
 } 
 
 a:hover, a:active {
+    text-decoration: none;
     color: rgb(255, 216, 104);
 }
 
@@ -39,12 +40,12 @@ p {
     border-color: #374f63;
     background-color: #0873D5;
     position: relative;
-    top: 15rem;
+    top: 18rem;
 }
 
 .startingScreenName {
-    position: relative;
-    top: 2rem;
+    position: relative;    
+    top: 1.2rem;
 }
 
 .white {
